# foocat2

./: .gitignore  .readthedocs.yml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: foocat2.rst  modules.rst
foocat2/: foocat2.py
tests/: test_foocat2.py
