[tool.poetry]
name = "foocat2"
version = "0.1.4"
description = "Python package that eases the pain concatenating Pandas categoricals!"
authors = ["Tiffany Timbers"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
pytest-cov = "^2.8.1"
codecov = "^2.0.15"
python-semantic-release = "4.6.0"
recommonmark = "^0.6.0"

[tool.semantic_release]
version_variable = "foocat2/__init__.py:__version__"
version_source = "commit"
upload_to_pypi = "false"
patch_without_tag = "true"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

